[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/grid.png" type="Texture" id=1]
[ext_resource path="res://Sprites/head.png" type="Texture" id=2]
[ext_resource path="res://Scripts/level.gd" type="Script" id=3]
[ext_resource path="res://Scripts/score_board.gd" type="Script" id=4]
[ext_resource path="res://Sprites/grid_tile.png" type="Texture" id=5]
[ext_resource path="res://Scripts/snake_body.gd" type="Script" id=6]
[ext_resource path="res://Scripts/snake.gd" type="Script" id=7]

[sub_resource type="TileSet" id=1]
0/name = "grid_tile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 1.75 )

[node name="level" type="Node2D"]
script = ExtResource( 3 )

[node name="grid" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 114.0
texture = ExtResource( 1 )

[node name="Level" type="Area2D" parent="."]
position = Vector2( -60, -4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level"]
position = Vector2( 0, -2 )
scale = Vector2( 0.97561, 0.97561 )
build_mode = 1
polygon = PoolVector2Array( 70.725, 15.375, 175.275, 15.375, 176.3, 14.35, 69.7, 14.35, 69.7, 120.95, 176.3, 120.95, 176.3, 14.35, 175.275, 15.375, 175.275, 119.925, 70.725, 119.925 )

[node name="snake" type="Node2D" parent="."]
position = Vector2( 60, 60 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="head" type="Area2D" parent="snake"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="snake/head"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="snake/head"]
shape = SubResource( 2 )

[node name="score_board" type="Control" parent="."]
margin_left = 121.0
margin_top = 14.0
margin_right = 166.0
margin_bottom = 29.0
rect_scale = Vector2( 0.8, 0.8 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="score_board"]
text = "0"

[connection signal="area_entered" from="Level" to="snake" method="_on_Level_area_entered"]
[connection signal="game_over" from="snake" to="." method="_on_snake_game_over"]
