[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/canonball.png" type="Texture" id=1]
[ext_resource path="res://Scripts/snake_body.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_dir"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ) ]
}

[node name="body" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, -5.96046e-08 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_body_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_body_area_exited"]
